--- a/areadoprofessor.html
+++ b/areadoprofessor.html
@@ -23,23 +23,12 @@
     <br>
     <label> Conteúdos </label>
     <select id="Conteúdos">
-        <option selected value=""> 1º </option>
+        <option selected value=""> Selecione a turma </option>
             <option> 1º </option>
             <option> 2º </option>
             <option> 3º </option>
     </select>
-    <select id="Conteúdos">
-        <option selected value=""> 2º</option>
-            <option> 1º </option>
-            <option> 2º </option>
-            <option> 3º </option>
-    </select>
-    <select id="Conteúdos">
-        <option selected value=""> 3º </option>
-            <option> 1º </option>
-            <option> 2º </option>
-            <option> 3º </option>
-    </select><br><br>
+    <br><br>
     <label> Vídeos </label><br>
     <button class="botao" type="submit" submit=""> Adicionar mais +</button><br>
 
