--- a/areadoprofessor.html
+++ b/areadoprofessor.html
@@ -31,15 +31,17 @@
     <br><br>
     <label> Vídeos </label><br>
     <button class="botao" type="submit" submit=""> Adicionar mais +</button><br>
-
     <br>
     <label> PDFs </label><br>
     <button class="botao" type="submit" submit=""> Adicionar mais +</button><br>
-
     <br>
     <label> Jogos </label><br>
-    <button class="botao" type="submit" submit=""> Adicionar mais +</button><br>
+    <button class="botao" type="submit" submit=""> Adicionar mais +</button><br><br>
+    
+    <form action="home page.html">
 
-
+  <input type="submit" value="↩" >
+        
+</form>
 </body>
 </html>
